--- a/app/view/buy/buy.html
+++ b/app/view/buy/buy.html
@@ -31,24 +31,24 @@
     <div class="search-pager">
       {% if pages.pagination.length > 1 %}
       <ul class="pagination">
-        <a href="{{activeMenu}}-result?{{pages.prevUrl}}" aria-label="Previous">  <li class="arrow">
-         
-            <span aria-hidden="true"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-        
-        </li>  </a>
+        <a href="{{pages.prevUrl}}" aria-label="Previous">
+          <li class="arrow">
+              <span aria-hidden="true"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+          </li>
+        </a>
         {% for item in pages.pagination %}
           {% if pages.currPage == item.page %}
-          <a href="{{activeMenu}}-result?{{item.params}}"></a>  <li class="active">{{item.page}}</li></a>
+            <li class="active">{{item.page}}</li></a>
           {% else %}
-            <li><a href="{{activeMenu}}-result?{{item.params}}">{{item.page}}</a></li>
+            <li><a href="{{item.params}}">{{item.page}}</a></li>
           {% endif %}
         {% endfor %}
-        <a href="{{activeMenu}}-result?{{pages.nextUrl}}" aria-label="Next">  <li class="arrow">
-          
+        <a href="{{pages.nextUrl}}" aria-label="Next">
+          <li class="arrow">
             <span aria-hidden="true"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-        
-        </li>  </a>
-        <li><a href="{{activeMenu}}-result?{{item.params}}">{{pages.currPage}}/{{pages.totalPages}}</a></li>
+          </li>
+        </a>
+        <li><a href="#">{{pages.currPage}}/{{pages.totalPages}}</a></li>
       </ul>
       {% endif %}
     </div>
