--- a/app/view/about/careers.html
+++ b/app/view/about/careers.html
@@ -22,11 +22,12 @@
     <p class="career-desc">
       With an expansive network in 70 countries featuring 900 offices worldwide, LSIR forms part of this impressive global network, creating unique opportunities for those seeking an exciting and rewarding career in luxury real estate on the international level.
     </p>
+
   </div>
   <div class="form-wrapper">
     <form id="recruitment-form" onsubmit="return false;" class="join-our-team">
         <div class="row">
-          <div class="col-md-6 col-sm-6 col-sm-12">
+          <p style="margin-bottom:30px;">If you are interested in an opportunity with us, please connect with us by filling out below information.</p> <div class="col-md-6 col-sm-6 col-sm-12">
             {{forms.field('name', 'NAME')}}
           </div>
           <div class="col-md-6 col-sm-6 col-sm-12">
