--- a/app/view/about/marketing-property.html
+++ b/app/view/about/marketing-property.html
@@ -19,16 +19,85 @@
   </div>
   <div class="marketing-home-wrapper">
       <span class="text-center title-parg">MARKETING YOUR HOME</span>
-    <p class="career-desc"style="padding:0 15px;">
-      Our sales and marketing strategy is all about making impressions worldwide. It’s about creating global connections and establishing true consumer engagement.
+    <p class="career-desc"style="padding:0 15px 20px;">
+        Our sales and marketing strategy is all about making impressions worldwide. It’s about creating global connections and establishing true consumer engagement. We achieve these through a series of all-round advertising and promotional channels and backed by a solid team of professional sales associate and marketing experts.  
     </p>
     <p class="text-center">
       <a class="common-btn" href="/list-property" style="width: 250px;display: inline-block;">List Your Property</a>
     </p>
   </div>
-  <div class="gally-scroll"><iframe id="ifr" onload="onloadMP();" src="/marketing-your-home" scrolling="no" style="width:100%;height: 600px; margin-bottom:50px;" frameborder="0"></iframe></div>
+
+  <div class="grid-marley mt80 mb80">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto%3A500%2C400italic%2C100%2C700italic%2C300%2C700%2C500italic%2C100italic%2C300italic%2C400%7CRoboto+Slab%3A400%2C100%2C300%2C700">
+    <figure class="effect-marley col-md-4 col-sm-6 col-xs-12  flush-left">
+        <img src="/public/marketing-your-home/pic/01.jpg" alt="List Sotheby's International Realty">
+        <figcaption>
+            <h2>COLLECTION</h2>
+            <p>Access to many of the Hong Kong’s wealthiest clientele, including the luxury home owners and occupants in prestige locations, this exclusive publication of List Sotheby’s International Realty, Hong Kong showcases the most extraordinary homes from Hong Kong and other distinct locations around the world. COLLECTION is also distributed to Hong Kong Grade A Commercial Buildings, Private Clubs, Sotheby’s Hong Kong Auction House and participating affiliates of Sotheby’s International Realty®.<br><br>Advertising Enquiries <a href="mailto:collection@listsirhk.com?subject=Collection Enquiries">collection@listsirhk.com</a></p>
+        </figcaption>			
+    </figure>
+      
+    <figure class="effect-marley col-md-4 col-sm-6 col-xs-12 ">
+      <img src="/public/marketing-your-home/pic/02.jpg" alt="List Sotheby's International Realty">
+      <figcaption>
+          <h2>ART & HOME</h2>
+          <p>Art &amp; Home is a literary collaboration between Sotheby’s and Sotheby’s International Realty, showcasing all the elements of an extraordinary life. The magazine engages readers with sophisticated content and beautiful images related to the art and real estate worlds. Rich editorial about art, design and extraordinary properties is presented by the venerable brand that is Sotheby’s.</p>
+      </figcaption>			
+  </figure>  
+  <figure class="effect-marley col-md-4 col-sm-6 col-xs-12 ">
+      <img src="/public/marketing-your-home/pic/03.jpg" alt="List Sotheby's International Realty">
+      <figcaption>
+          <h2>MARKETING COLLATERAL</h2>
+          <p>In addition to a vast digital and media campaign, direct mail provides an extra edge when promoting a home. A series of professionally designed brochures, postcards and email templates are available and easily customizable.</p>
+  </figure>  
+  <figure class="effect-marley col-md-4 col-sm-6 col-xs-12  flush-left">
+      <img src="/public/marketing-your-home/pic/05.jpg" alt="List Sotheby's International Realty">
+      <figcaption>
+          <h2>SIR.COM</h2>
+          <p>Our listings’ digital exposure begins with SIR.com, our corporate website, and SIR mobile App which is the only luxury real estate app that serves properties in nearly 70 countries.   All the digital platforms cascade through our lifestyle-focused sites, to our global network of local websites and onto our media partner websites.
+            This strategy extends the exposure of extraordinary homes to extraordinary lives in all corners of the globe no matter if you click, tap or swipe.</p>
+      </figcaption>			
+  </figure>  
+  <figure class="effect-marley  col-md-4 col-sm-6 col-xs-12 ">
+      <img src="/public/marketing-your-home/pic/06.jpg" alt="List Sotheby's International Realty">
+      <figcaption>
+          <h2>SOCIAL MEDIA</h2>
+          <p>Social media is a vital tool in this space for luxury brands to provide up-to-date content to their loyal following as well as to attract new connections. Influential, well-connected buyers like to engage directly with their favorite brands, looking at unique photos, videos and articles with the ability to respond and share the content with their circles. We are not simply “posting” on social media. We are nurturing a highly engaged group of opinion-makers with exclusive content on Facebook, Instagram, WeChat, and LinkedIn. We know that our social content marketing approach works because Facebook is the top referring source of traffic to sothebysrealty.com.</p>
+  </figure>  
+  <figure class="effect-marley col-md-4 col-sm-6 col-xs-12 ">
+    <img src="/public/marketing-your-home/pic/09.jpg" alt="List Sotheby's International Realty" class="img-replace">
+    <figcaption>
+        <h2><span style=" text-transform:lowercase">e</span>Gallery</h2>
+        <p>The Sotheby’s International Realty® eGallery is displayed on high-definition touch screen panel in Sotheby’s International Realty and Sotheby’s auction house locations around the world. It is an exclusive, real time, dynamic property slideshow designed to provide worldwide reach for the select upper tier properties represented by our network.</p>
+    </figcaption>
+</figure>
+<figure class="effect-marley col-md-4 col-sm-6 col-xs-12  flush-left">
+    <img src="/public/marketing-your-home/pic/10.jpg" alt="List Sotheby's International Realty">
+    <figcaption>
+        <h2>GLOBAL AFFILIATE NETWORK</h2>
+        <p>Over 20,000 SIR’s real estate associates represent one of the few, truly interconnected real estate networks. Associates are constantly interacting and meeting new peers through numerous events. Should one of our associate have a client looking for a residence in Japan, New York, London or Africa it is highly likely the relationships with professionals in these markets have already been forged.</p>
+    </figcaption>			
+</figure>  
+<figure class="effect-marley col-md-4 col-sm-6 col-xs-12 ">
+    <img src="/public/marketing-your-home/pic/11.jpg" alt="List Sotheby's International Realty">
+    <figcaption>
+        <h2>AUCTION HOUSE EVENT</h2>
+        <p>As associates of an extraordinary brand with a rich heritage, one of the most unique advantages we possess is our relationship with the Sotheby’s Auction House, a venerable name in the world of exclusive items. The auction house hosts numerous events throughout the year, where SIR associates are able to meet colleagues and establish connections with auction house clientele.</p>
+</figure>  
+<figure class="effect-marley col-md-4 col-sm-6 col-xs-12 ">
+  <img src="/public/marketing-your-home/pic/12.jpg" alt="List Sotheby's International Realty" class="img-replace">
+  <figcaption>
+      <h2>PREMIER SPONSORSHIP PROGRAM</h2>
+      <p>The Premier Sponsorship Program offers affiliates the opportunity to benefit from direct exposure to Sotheby’s Auction House clientele at selected sales around the world, with a designated Sotheby’s International Realty® desk strategically positioned in highly trafficked areas, invitations to private receptions and branded marketing collateral. In addition to this signature program, a variety of custom events throughout the year are available to our affiliates at Sotheby’s discretion, including valuation days, traveling exhibitions and more.</p>
+  </figcaption>
+</figure>
+
+
+</div>
+
+  <!-- <div class="gally-scroll"><iframe id="ifr" onload="onloadMP();" src="/marketing-your-home" scrolling="no" style="width:100%;height: 600px; margin-bottom:50px;" frameborder="0"></iframe></div> -->
   
-  <script>
+  <!-- <script>
     function onloadMP() {
       var ifr = document.getElementById('ifr');
       $('#ifr').css('height', ifr.contentDocument.body.offsetHeight + 70);
@@ -36,7 +105,7 @@
     $(window).resize(function(){
       onloadMP();
     });
-  </script>
+  </script> -->
   {% include "../base/footer.html" %}
 </body>
 </html>
