--- a/app/view/about/marketing-your-home.html
+++ b/app/view/about/marketing-your-home.html
@@ -59,7 +59,7 @@
 					        <figure class="move-image selected print">
                                 <img src="/public/marketing-your-home/pic/03.jpg" alt="List Sotheby's International Realty" class="img-replace">
 								<figcaption>
-									<h2>BROCHURES</h2>
+									<h2>MARKETING COLLATERAL</h2>
                                     <p>In addition to a vast digital and media campaign, direct mail provides an extra edge when promoting a home. A series of professionally designed brochures, postcards and email templates are available and easily customizable.</p>
 								</figcaption>
 					        </figure>    
