--- a/app/view/buy/search-side.html
+++ b/app/view/buy/search-side.html
@@ -77,7 +77,7 @@
       {% if activeMenu == 'rent' %}
       {{forms.checkbox('is_serviced_apartment', 'true', 'Serviced Apartment', {checked: query.is_serviced_apartment})}}
       {% endif %}
-      {{forms.checkbox('has_maid_room', 'true', 'Maid Room', {checked: query.has_maid_room})}}
+      {{forms.checkbox('has_maid_room', 'true', 'Maid's Room', {checked: query.has_maid_room})}}
       {{forms.checkbox('has_terrace', 'true', 'Terrace', {checked: query.has_terrace})}}
       {{forms.checkbox('has_garden', 'true', 'Garden', {checked: query.has_garden})}}
       {{forms.checkbox('has_balcony', 'true', 'Balcony', {checked: query.has_balcony})}}
