--- a/app/view/search/list-property.html
+++ b/app/view/search/list-property.html
@@ -13,8 +13,13 @@
   <div class="container">
     <div class="link-map">
       <a href="/">Home ></a>
-      <a href="#">List Your Property</a>
+      <a href="#">List Your Property</a>   
     </div>
+    <h1 class="title-parg text-center">List Your Property</h1>
+    <p class="career-desc mb30">
+      With our innovative marketing tools, we can make your treasured property distinctive with our unparalleled connection to the luxury property market. Let our professional sales associates begin the journey and connect you with the group of potential clients. List your property with us today!
+    </p>
+
     <form id="list_property_form" onsubmit="return false;" method="get" class="search-form">
       <div class="row">
         <div class="col-md-1 col-sm-6 col-xs-12" style="margin-left: 5px;">
