--- a/app/style/international.less
+++ b/app/style/international.less
@@ -1,30 +1,6 @@
-// .international-list {
-//   min-height: 300px;
-//   margin-top: 30px;
-//   .list-item {
-//     margin-bottom: 20px;
-//     .ibox {
-//       position: relative;
-//       height: 140px;
-//       width: 210px;
-//       margin: 0 auto;
-//       .name {
-//         position: absolute;
-//         top: 5px;
-//         left: 5px;
-//         color: white;
-//         font-size: 12px;
-//       }
-//       img {
-//         height: 140px;
-//         display: block;
-//       }
-//     }
-//   }
-// }
 
 .box {
-  width:50%; 
+  width:25%; 
   margin:0px; 
   float:left; 
   display:inlin-block;
@@ -36,6 +12,9 @@
 
 .box-outter {
   margin: 0px -10px;
+}
+body .item_text {
+    text-transform: uppercase;
 }
   .eltd-drop-down .second .inner ul li a, .eltd-drop-down .second .inner ul li h4 {
     display: block;
@@ -50,13 +29,14 @@
     -webkit-transition: color .15s ease-out;
     -moz-transition: color .15s ease-out;
     transition: color .15s ease-out;
+    font-family: Poppins,sans-serif;
 	  
 }
 .eltd-overlapping-content {
     border: none;
 }
 figure.snip1100 {
-  
+  font-family: 'Raleway', Arial, sans-serif;
   color: #fff;
   position: relative;
   float: left;
@@ -100,9 +80,11 @@ figure.snip1100 figcaption h3 {
   font-size: 12px;
   color: #fff;
   text-align: center;
+  text-transform: uppercase;
   -webkit-transform: translateY(50%);
   transform: translateY(50%);
-  letter-spacing: 2px;
+	font-family: 'Gill Sans', Calibri;
+    letter-spacing: 2px;
 }
 
 figure.snip1100 figcaption p {
@@ -215,7 +197,7 @@ figure.snip1100.hover figcaption div:after {
     padding-top: 45px !important;
   }
   .box-cap h3 {
-    
+    font-size: 16px !important;
   }
 
 }
@@ -225,7 +207,7 @@ figure.snip1100.hover figcaption div:after {
     padding-top: 5px !important;
   }
   .box-cap h3 {
-    
+    font-size: 14px !important;
   }
 }
   
@@ -234,7 +216,7 @@ figure.snip1100.hover figcaption div:after {
     padding-top: 45px !important;
   }
   .box-cap h3 {
-    
+    font-size: 16px !important;
   }
 } 
  @media only screen and (min-width: 481px) {
@@ -242,7 +224,7 @@ figure.snip1100.hover figcaption div:after {
       padding-top: 15px !important;
   }
   .box-cap h3 {
-    
+    font-size: 16px !important;
   }
 } 
  @media only screen and (min-width: 601px) {
@@ -250,7 +232,7 @@ figure.snip1100.hover figcaption div:after {
       padding-top: 60px !important;
   }
   .box-cap h3 {
-    
+    font-size: 16px !important;
   }
 } 
  @media only screen and (min-width: 769px) {
@@ -258,7 +240,7 @@ figure.snip1100.hover figcaption div:after {
       padding-top: 45px !important;
   }
   .box-cap h3 {
-    
+    font-size: 16px !important;
   }
 } 
  @media only screen and (min-width: 1025px) {
@@ -266,7 +248,7 @@ figure.snip1100.hover figcaption div:after {
     padding-top: 24px !important;
   }
   .box-cap h3 {
-    
+    font-size: 16px !important;
   }
 } 
  @media only screen and (min-width: 1201px) {
@@ -274,14 +256,15 @@ figure.snip1100.hover figcaption div:after {
     padding-top: 34px !important;
   }
   .box-cap h3 {
-   
+   font-size: 20px !important;
   }
 }  @media only screen and (min-width: 1401px) {
  .box-cap {
     padding-top: 50px !important;
   }
   .box-cap h3 {
-   
+   font-size: 25px !important;
   }
 }  
 
+}
