--- a/app/style/mockup-checkbox.less
+++ b/app/style/mockup-checkbox.less
@@ -207,8 +207,8 @@ width: 120px;
 }
 
 .common-btn {
-  height: 33px;
-  line-height: 30px;
+  height:50px;
+  // line-height: 50px;
   cursor: pointer;
   width: auto!important;
   font-weight: lighter;
@@ -222,6 +222,7 @@ width: 120px;
   padding-left: 20px;
   padding-right: 20px;
 max-width: 100%!important;
+font-family: 'Open Sans',sans-serif;
 }
 
 .auto-complete {
