update common btn line height

--- a/app/style/mockup-checkbox.less
+++ b/app/style/mockup-checkbox.less
@@ -208,7 +208,7 @@ width: 120px;
 
 .common-btn {
   height:50px;
-  // line-height: 50px;
+  line-height: 46px;
   cursor: pointer;
   width: auto!important;
   font-weight: lighter;
