--- a/app/view/buy/search-result.html
+++ b/app/view/buy/search-result.html
@@ -12,8 +12,8 @@
               <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
             <ul class="result-slider">
-              {% for gallery in item.images %}
-              <li style="background-image: url({{gallery.image}})"></li>
+              {% for imageUrl in item.images %}
+              <li style="background-image: url({{imageUrl}})"></li>
               {% endfor %}
             </ul>
           </div>
