--- a/app/view/home/agent-listing.html
+++ b/app/view/home/agent-listing.html
@@ -109,7 +109,7 @@
             <li>
               <div class="card">
                 <a href="/property-detail?search_type={{item.type}}&id={{item.id}}">
-                  <div class="img" style="background-image:url(https://www.listsothebysrealtyhk.com{{item.url}})"></div>
+                  <div class="img" style="background-image:url({{apiHost}}{{item.url}})"></div>
                   <div class="name">{{item.name}}</div>
                   <div class="location">{{item.location}}</div>
                   <div class="price">{{item.sqft}} SQ FT | {{item.price}}</div>
